# antemodulum

./: .gitignore  LICENSE  README.md  antemodulum.cabal
src/: Antemodulum.hs
src/Antemodulum/: Applicative.hs  Arrow.hs  Char.hs  ClassyPrelude.hs  Concurrent.hs  DeepSeq.hs  Default.hs  FilePath.hs  Functor.hs  Maybe.hs  Monad.hs  Numeric.hs  Read.hs  Safe.hs  Strict.hs  System.hs  Text.hs  Time.hs
src/Antemodulum/ByteString/: Char8.hs  Lazy.hs  Strict.hs
src/Antemodulum/List/: NonEmpty.hs
src/Antemodulum/Monad/: Error.hs  IO.hs  Lazy.hs  Strict.hs
src/Antemodulum/Strict/: Pair.hs
src/Antemodulum/Text/: Lazy.hs  Strict.hs
