name:                   antemodulum
version:                0.1
synopsis:               Yet another prelude
category:               Prelude
description:            This is one (very biased) attempt to make a prelude
                        module that (1) ensures the exported names do not
                        conflict and (2) significantly reduces the number of
                        imports needed in a given module. It is meant to be
                        extended and updated as needed.
license:                MIT
author:                 Sean Leather
maintainer:             eng@docmunch.com
copyright:              Daggerboard Inc. (docmunch.com)
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.16

extra-source-files:
                        README.md

source-repository       head
  type:                 git
  location:             git://github.com/docmunch/antemodulum.git

library

  default-language:     Haskell2010

  default-extensions:
                        FlexibleContexts,
                        FlexibleInstances,
                        NoImplicitPrelude,
                        OverloadedStrings,
                        TypeSynonymInstances

  ghc-options:          -Wall -fwarn-missing-local-sigs

  hs-source-dirs:       src

  exposed-modules:
                        Antemodulum
                        Antemodulum.Applicative
                        Antemodulum.Arrow
                        Antemodulum.ByteString.Lazy
                        Antemodulum.ByteString.Strict
                        Antemodulum.Char
                        Antemodulum.ClassyPrelude
                        Antemodulum.Concurrent
                        Antemodulum.Default
                        Antemodulum.FilePath
                        Antemodulum.Functor
                        Antemodulum.Text.Lazy
                        Antemodulum.Text.Strict
                        Antemodulum.Maybe
                        Antemodulum.Monad
                        Antemodulum.Monad.Error
                        Antemodulum.Monad.Lazy
                        Antemodulum.Monad.Strict
                        Antemodulum.Numeric
                        Antemodulum.System
                        Antemodulum.Time

  build-depends:
                        base == 4.6.*,
                        bytestring == 0.10.*,
                        classy-prelude == 0.7.*,
                        -- The Default class was split off in 0.5.2.
                        data-default >= 0.5.2 && < 0.6,
                        directory == 1.2.*,
                        lifted-async == 0.1.*,
                        monad-control == 0.3.*,
                        monad-logger == 0.3.*,
                        mtl == 2.1.*,
                        process == 1.2.*,
                        setenv == 0.1.*,
                        system-filepath == 0.4.*,
                        text == 1.1.*,
                        time == 1.4.*,
                        transformers == 0.3.*,
                        transformers-base == 0.4.*
