name:                   antemodulum
version:                0.2
synopsis:               Yet another prelude
category:               Prelude
description:            This is one (very biased) attempt to make a prelude
                        module that (1) ensures the exported names do not
                        conflict and (2) significantly reduces the number of
                        imports needed in a given module. It is meant to be
                        extended and updated as needed.
license:                MIT
author:                 Sean Leather
maintainer:             eng@docmunch.com
copyright:              Daggerboard Inc. (docmunch.com)
license-file:           LICENSE
build-type:             Simple
cabal-version:          >= 1.16

extra-source-files:
                        README.md

source-repository       head
  type:                 git
  location:             git://github.com/docmunch/antemodulum.git

library

  default-language:     Haskell2010

  default-extensions:
                        LambdaCase,
                        FlexibleContexts,
                        FlexibleInstances,
                        NoImplicitPrelude,
                        OverloadedStrings,
                        ScopedTypeVariables,
                        TypeSynonymInstances

  ghc-options:          -Wall -fwarn-missing-local-sigs

  hs-source-dirs:       src

  exposed-modules:
                        Antemodulum
                        Antemodulum.Applicative
                        Antemodulum.Arrow
                        Antemodulum.ByteString.Char8
                        Antemodulum.ByteString.Lazy
                        Antemodulum.ByteString.Strict
                        Antemodulum.Char
                        Antemodulum.ClassyPrelude
                        Antemodulum.Concurrent
                        Antemodulum.Default
                        Antemodulum.FilePath
                        Antemodulum.Functor
                        Antemodulum.List.NonEmpty
                        Antemodulum.Text
                        Antemodulum.Text.Lazy
                        Antemodulum.Text.Strict
                        Antemodulum.Maybe
                        Antemodulum.Monad
                        Antemodulum.Monad.Error
                        Antemodulum.Monad.IO
                        Antemodulum.Monad.Lazy
                        Antemodulum.Monad.Strict
                        Antemodulum.Numeric
                        Antemodulum.Read
                        Antemodulum.Safe
                        Antemodulum.Strict
                        Antemodulum.System
                        Antemodulum.Time

  build-depends:
                        base,
                        bytestring,
                        classy-prelude >= 0.7,
                        -- The Default class was split off in 0.5.2. Depending
                        -- on an older version can cause problems.
                        data-default >= 0.5.2,
                        deepseq,
                        directory,
                        lifted-async,
                        lifted-base,
                        monad-control,
                        monad-logger,
                        mtl,
                        process,
                        resourcet,
                        safe,
                        semigroups,
                        setenv,
                        strict,
                        system-fileio,
                        system-filepath,
                        text,
                        time,
                        transformers,
                        transformers-base
